--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  cloud_firestore: ^0.13.7
   http: ^0.12.2
   dio: ^3.0.10
   flutter_mobx: ^1.1.0+2
