Revert "Revert "Merge branch 'master' of https://github.com/elisvianaa/elisflutter""
This reverts commit e41cdd132536d98a50d3cbd3ba683272d1bd405f.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,7 @@ app.*.map.json
 
 # Exceptions to above rules.
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
+lib/app/modules/caso_clinico/caso_clinico_controller.g.dart
+lib/app/modules/curse/curse_controller.g.dart
+lib/app/modules/caso_clinico/caso_clinico_controller.g.dart
+lib/app/modules/case/case_controller.dart
